@@ -5,6 +5,9 @@ Changelog
 4.1.0 (unreleased)
 ------------------
 
+- Dropped prevent_deletion handler.
+  [phgross]
+
 - Added new document workflow state `document-state-removed`.
   [phgross]
 
